--- a/todo/views/list.ejs
+++ b/todo/views/list.ejs
@@ -6,13 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>
-    Hello
-    <%= name.split('').join('*') %>
-  </h1>
+  <table>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <%- data .map( todo => `
+      <tr>
+        <td>${todo.title}</td>
+        <td>
+          <a href="${baseUrl}/delete/${todo.id}">löschen</a>
+        </td>
+      </tr>
+      `, ) .join('') %>
+    </tbody>
+  </table>
 </body>
 
 </html>
